Update privacy policy

--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Legal Terms
-pagetag: OpenGazettes Terms of Use and Privacy Policy
+pagetag: OpenGazettes Terms of Use
 ---
 <section class="legal-terms">
   <div class="container">
@@ -11,8 +11,8 @@ pagetag: OpenGazettes Terms of Use and Privacy Policy
         <p>We are the owner of this website. These are our legal terms, including our:</p>
         <ul>
           <li><a href="#terms">terms of use and service</a> – which you agree to by visiting this website and using the services we provide on the website;</li>
-          <li><a href="#privacy">privacy policy</a> – which you agree to by visiting the website and using the services we provide on it.</li>
-        </ul> 
+          <li><a href="/2022 Public Privacy Policy.pdf">privacy policy</a> – which you agree to by visiting the website and using the services we provide on it.</li>
+        </ul>
         <p>We may change any of these terms at any time by updating this web page and placing a notice in a prominent place on the website. If you have any questions about our legal terms, please <a href="/about#contact-us">contact us</a>.</p>
       </div>
     </div>
@@ -104,58 +104,6 @@ pagetag: OpenGazettes Terms of Use and Privacy Policy
     <h3 id="20a">20. Jurisdiction</h3>
     <p>Only the South African courts may decide any dispute about the terms.</p>
 
-    <hr>
 
-    <h2 id="privacy">Privacy Policy</h2>
-    <div class="table-of-content">
-      <a href="#1b">1. Purpose</a>
-      <a href="#2b">2. Personal information</a>
-      <a href="#3b">3. Acceptance</a>
-      <a href="#4b">4. Purpose for collection</a>
-      <a href="#5b">5. Consent to collection</a>
-      <a href="#6b">6. Use</a>
-      <a href="#7b">7. Sharing and disclosure</a>
-      <a href="#8b">8. Security</a>
-			<a href="#9b">9. Storage</a>
-			<a href="#10b">10. Retention</a>
-			<a href="#11b">11. Transfer</a>
-			<a href="#12b">12. Updating or removing</a>
-    </div>
-
-    <h3 id="1b">1. Purpose</h3>
-    <p>This policy describes the way we handle your personal information when you visit our website or use the services we provide.</p>
-
-    <h3 id="2b">2. Personal information</h3>
-    <p>Personal information includes information you may provide to us when you sign up to our website or newsletter, or automatically when you visit our website or use the services. Personal information does not include de-identified or anonymous information. We may also collect mainly analytical data, including from cookies, web beacons and your browser directly.</p>
-
-    <h3 id="3b">3. Acceptance</h3>
-    <p>You may not use any of our services or visit the website if you do not accept this policy.</p>
-
-    <h3 id="4b">4. Purpose for collection</h3>
-    <p>We may use any of your personal information that you provide to us for the purposes that you indicated when you agreed to provide it to us.</p>
-
-    <h3 id="5b">5. Consent to collection</h3>
-    <p>We will get your consent to collect your personal information in accordance with applicable law when you provide us with it.</p>
-
-    <h3 id="6b">6. Use</h3>
-    <p>You own all your personal information, but give us a right to use it to provide the services to you, monitor your use of the website, and make any improvements to the website and the services for the benefit of all our users. We may use your contact information provided to contact you with product or user research messages. We take the protection of your data very seriously and will always do everything reasonably possible to comply with all relevant laws that affect your data.</p>
-
-    <h3 id="7b">7. Sharing and disclosure</h3>
-    <p>We may share your personal information with third parties for the purposes of fulfilling our obligations to you. We will not disclose your personal information to third parties for any other reason, unless required to do so for legal reasons or if we have your consent.</p>
-
-    <h3 id="8b">8. Security</h3>
-    <p>Our website is hosted on a secure server and uses reasonable security measures to prevent unauthorized interference by intruders.</p>
-
-    <h3 id="9b">9. Storage</h3>
-		<p>We may store your personal information on servers that are not in South Africa. When doing so, your personal information is transmitted and stored using reasonable security measures to prevent unauthorized access and interference.</p>
-		
-		<h3 id="10b">10. Retention</h3>
-		<p>We will only retain your personal information for as long as is necessary.</p>
-
-		<h3 id="11b">11. Transfer</h3>
-		<p>We may transfer your personal information outside South Africa to a foreign country.</p>
-
-		<h3 id="12b">12. Updating or removing</h3>
-    <p>You may choose to update or remove the personal information you have submitted to us by contacting us at <a href="mailto:info@openup.org.za">info@openup.org.za</a>.</p>
   </div>
 </section>
